# emergent

./: README.md  pyproject.toml  pyrightconfig.json
docs/: README.md  guide.md  philosophy.md  reference.md
emergent/: __init__.py  _types.py  lift.py
emergent/cache/: __init__.py  _builder.py  _ops.py  _types.py
emergent/graph/: __init__.py  _analyze.py  _compiled.py  _run.py  _visualize.py
emergent/graph/policy/: __init__.py
emergent/idempotency/: __init__.py  _builder.py  _graph.py  _policy.py  _sqlalchemy.py  _store.py  _types.py
emergent/ops/: __init__.py  _graph.py  _policy.py
emergent/saga/: __init__.py  _compose.py  _run.py  _step.py  _types.py
emergent/saga/policy/: __init__.py  _compensate.py  _on_failure.py  _timeout.py
emergent/wire/: __init__.py  _app.py  _endpoint.py  _types.py
emergent/wire/codecs/: __init__.py  rrc.py
emergent/wire/contrib/: __init__.py  _fastapi.py  fastapi.py
emergent/wire/triggers/: __init__.py  http.py
examples/: _infra.py  cache_example.py  graph_example.py  idempotency_example.py  ops_basic_example.py  ops_composition_example.py  saga_example.py  wiring.py
examples/full_stack/: README.md  __init__.py  cli.py  domain.py  graph.py  main.py  repo.py  visualize.py
examples/full_stack/nodes/: __init__.py  _cache.py  _fraud.py  _input.py  _items.py  _order.py  _preview.py  _saga.py  _shipping.py  _totals.py  _user.py  _userinfo.py
examples/idempotency_payments/: __init__.py  db.py  domain.py  main.py  service.py  store.py
